--- a/dice/index.html
+++ b/dice/index.html
@@ -3,12 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
-    <button id="button">Roll!</button>
+    <div class="d-flex justify-content-center align-items-center vh-100">
+        <div class="row justify-content-center text-center w-100">
+            <div class="col-5">
+                <h1>You</h1>
+                <h2 id="player">-</h2>
+            </div>
+            <button id="button" class="btn btn-danger btn-large col-2">Roll!</button>
+            <div class="col-5">
+                <h1>The Computer</h1>
+                <h2 id="computer">-</h2>
+            </div>
+            <h2 id="result" class="col-2 p-3">-</h2>
+        </div>
+    </div>
     
 
+
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-- my script -->
     <script src="./script.js"></script>
 </body>
