--- a/mail/index.html
+++ b/mail/index.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="email" name="" id="" placeholder="email">
+    <input type="email" name="" id="email" placeholder="email">
     <button id="button">Confirm</button>
+
+    <div id="result"></div>
 
     <!-- my script -->
     <script src="./script.js"></script>
