--- a/mail/index.html
+++ b/mail/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="email" name="" id="email" placeholder="email">
+    <input type="email" name="email" id="email" placeholder="email">
     <button id="button">Confirm</button>
 
     <div id="result"></div>
