--- a/mail/index.html
+++ b/mail/index.html
@@ -3,14 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- my style -->
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
-    <input type="email" name="email" id="email" placeholder="email">
-    <button id="button">Confirm</button>
+    <div class="container-fluid position-relative vh-100">
+        <div class="position-absolute top-50 start-50 translate-middle text-center">
+            <h2>Welcome back Agent. Insert your credentials.</h2>
+            
+            <div class="p-5 d-flex justify-content-center align-items-center gap-5">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" class="bg-transparent border-0 border-bottom">
+                <button id="button" class="btn">Confirm</button>
+            </div>
 
-    <div id="result"></div>
-
+            <h3 id="result" class="opacity-0">-</h3>
+        </div>
+    </div>
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-- my script -->
     <script src="./script.js"></script>
 </body>
